ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-data-ingress
  annotations:
    cloud.google.com/load-balancer-type: "External"
    spec.ingressClassName: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-data-service
                port:
                  number: 80
